--- a/css/style.css
+++ b/css/style.css
@@ -1,119 +1,186 @@
+/*
+INDEX CSS DOC:
+  -LAYOUT
+  -FONTS
+  -ELEMENTS
+  -HOVER EFFECTS
+  -MEDIA QUERIES
+  -IMAGES
+  -COLORS
+*/
+
+
+
+
+/*SETUP */
+*, *:before, *:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+/*SETUP */
+
+
+
+
 /* LAYOUT	*/
 html{
 	height: 100%;
 }
-
-.no-margin {
-margin:0px;}
-
-.no-padding{
-padding:0px;}
-
-.no-border{
-border-color:transparent;}
-
-.no-shadow{
-	box-shadow: 0px, 0px, 0px;
+body{
+  margin: 0px;
 }
-
-.no-background{
-	background-color: transparent;
+.perimeter{
+  border: 2px solid #f95959;
 }
+/* LAYOUT	*/
 
-.max-width{
-max-width:100%;
-height:auto;}
 
-.dark-background{
-background-color:#2F2F2F}
-
-.grey-background{
-background-color:#E6E6E6 }
-
-.light-background{
-background-color:#F8F8F8 }
-
-.resimgbackground{
-	background-image:url('../immagini/gi2.JPG');
-background-position: center center;
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-background-color: #464646;
-	}
 
 
 /* FONTS	*/
-
+.montserrat{
+  font-family: 'Montserrat', sans-serif;
+}
 @font-face {
-	font-family: "Zona Pro";
-	src: url('../fonts/ZonaPro-Bold.otf') format('opentype');
-}
-.zonapro {
-font-family: 'Zona Pro', sans-serif;
+	font-family: "Montserrat";
+	src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
 }
 
-@font-face {
-	font-family: "Mohave";
-	src: url('../fonts/Mohave-Bold.otf') format('opentype');
+.justify{
+  text-align: justify;
 }
-.mohave {
-font-family: "Mohave", sans-serif;
+.textcenter{
+  text-align: center;
 }
-
-.mohave-bold {
-font-family: "Mohave", sans-serif;
-font-weight: bold;
+.text-left{
+  text-align: left;
 }
-
-.opensans {
-font-family: 'Open Sans', sans-serif;
-}
-
-.opensans-bold{
-font-family: 'Open Sans', sans-serif;
-font-weight: bold;
-}
-
-.opensans-justify{
-font-family: 'Open Sans', sans-serif;
-text-align: justify;
-font-size: 15px;
-}
-
 .bold{
 	font-weight: bold;
 }
+.text-white{
+  color: white;
+}
+
+/* FONTS	*/
+
+
 
 
 /* ELEMENTS	*/
-
-.homepage {
-box-shadow: 2px 0px 10px #A1A1A1 ;
+.wrap{
+  height: 100%;
+  margin-left:20%;
+  margin-right:20%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.title{
+  font-size: 32px;
+  font-weight: 100;
 }
 
-.home-title {
-color: #F8F8F8;
-margin-bottom: 10px;
-text-align: center;
-text-shadow: 0px 0px 1px #A1A1A1;
-font-size: 90px;
+.popup{
+  transform-origin: center top;
+  height: 0px;
+  width: 0px;
+  box-shadow: 0px 1px 7px #777;
+  background-color: #fcfcfc;
+  top: 0px;
+  border: 0px solid #a29694;
+  border-radius: 4px;
+  -webkit-transition: height 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s, width 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s, box-shadow 0.7s cubic-bezier(.79,.14,.15,.86) 0.25s, top 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s;
+  transition: height 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s, width 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s, box-shadow 0.7s cubic-bezier(.79,.14,.15,.86) 0.25s, top 0.2s cubic-bezier(.79,.14,.15,.86) 0.1s;
+}
+@keyframes poptxt {
+  from{opacity:0;}
+  to{opacity: 1;}
+}
+/* ELEMENTS	*/
+
+
+
+
+/* HOVER EFFECTS */
+/* HOVER EFFECTS */
+
+
+
+
+/* MEDIA QUERY*/
+@media screen and (max-width: 600px){
 }
 
-.home-text {
-color: #F8F8F8;
-text-align: center;
-text-shadow: 0px 0px 1px #A1A1A1;
-font-size: 22px;
+@media screen and (max-width: 840px) {
+  .title{
+    font-size: 20px;
+  }
 }
+/* MEDIA QUERY*/
 
-.home-fix{
-position: fixed;
-top: 40%;
-animation-duration: 1s;
-animation-delay: 0.7s;
-animation-iteration-count: 1;
+
+
+
+/* IMG	*/
+.image1{
+  background-image: url('../img/chisiamo3.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: ;
+  background-size: cover;
 }
+/* IMG	*/
 
 
-/* ANIMATIONS	*/
+
+
+/* COLORS	  #2daf94, #3ec8ac, #4be4c5, #c8f6ed #ffce63 #faf15d #0aa0f6 #0e7cf4 #0962ea #44679f  #f95959*/
+/* COLORS	*/
+
+
+
+
+/* ANIMATE CSS	*/
+
+/*!
+ * animate.css -http://daneden.me/animate
+ * Version - 3.5.1
+ * Licensed under the MIT license - http://opensource.org/licenses/MIT
+ *
+ * Copyright (c) 2016 Daniel Eden
+ */
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-delay: 0s;
+}
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
+/* ANIMATE CSS	*/
